--- a/app/src/main/res/layout/item_drawer.xml
+++ b/app/src/main/res/layout/item_drawer.xml
@@ -1,22 +1,21 @@
 <!-- 식물 목록 페이지의 항목 뷰 -->
 <!-- 아니 이거 프레임이 아니라 아이템이잖아 -->
-
-<layout
-    xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:tools = "http://schemas.android.com/tools">
-
-
 <LinearLayout
+    xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:tools = "http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:id="@+id/record_pot">
 
     <LinearLayout
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <!-- 여기에 이미지가 들어갈 뷰를 만들어줍시다. 밑의 image_record가 실제로 이미지가 들어갈 부분.-->
+
         <TextView
             android:id="@+id/image_record_pot"
             android:layout_width="wrap_content"
@@ -102,5 +101,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
-</layout>
