--- a/app/src/main/res/layout/activity_pot.xml
+++ b/app/src/main/res/layout/activity_pot.xml
@@ -14,7 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="280dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
         <Button
             android:id="@+id/pot_prev"
             android:layout_width="20dp"
@@ -35,6 +36,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Next" />
+
     </LinearLayout>
 
 
@@ -48,21 +50,24 @@
             android:layout_height="60dp"
             android:orientation="horizontal">
             <!-- 텍스트 -> 아이콘 이미지 / 버튼 -> 수치 -->
+
             <TextView
                 android:id="@+id/image_pot_info1"
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:maxLines="1"
-                android:textSize="30sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
-                tools:text="(정보 1)" />
+            />
             <ImageView
-                android:id="@+id/pot_info1"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:src="@drawable/bar_light" />
+                android:id="@+id/pot_temp_bar"
+                android:layout_width="330dp"
+                android:layout_height="30dp"
+                 android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bar_temp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -73,16 +78,18 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:maxLines="1"
-                android:textSize="30sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
-                tools:text="(정보 1)" />
+               />
             <ImageView
-                android:id="@+id/pot_info2"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:src="@drawable/bar_temp" />
+                android:id="@+id/pot_humed_bar"
+                android:layout_width="330dp"
+                android:layout_height="30dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bar_humid" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -93,20 +100,26 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:maxLines="1"
-                android:textSize="30sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
-                tools:text="(정보 1)" />
+                />
             <ImageView
-                android:id="@+id/pot_info3"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:src="@drawable/bar_humid" />
+                android:id="@+id/pot_light_bar"
+                android:layout_width="330dp"
+                android:layout_height="30dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bar_light" />
         </LinearLayout>
 
 
     </LinearLayout>
-
+    <Button
+        android:id="@+id/btn__config"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Config" />
 
 
 
