--- a/app/src/main/res/layout/activity__control.xml
+++ b/app/src/main/res/layout/activity__control.xml
@@ -115,6 +115,21 @@
             android:layout_weight="1"
             android:text="SEND ALL" />
             -->
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:hint="Edit Name Input"/>
+
+        <Button
+            android:id="@+id/name_button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textSize="20dp"
+            android:text="edit"
+            android:layout_gravity="center"/>
+
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
